--- a/10-webpack/.babelrc
+++ b/10-webpack/.babelrc
@@ -1,5 +1,5 @@
 {
     "presets": ["@babel/env"],
-    "plugins": ["transform-runtime"],
+    "plugins": ["@babel/plugin-transform-runtime"],
     "comments": false
 }
