--- a/10-webpack/package.json
+++ b/10-webpack/package.json
@@ -11,11 +11,12 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.7.4",
+    "@babel/plugin-transform-runtime": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "babel-loader": "^8.0.6",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-runtime": "^6.26.0",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.2.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
     "vue-hot-reload-api": "^2.3.4",
